# neo-rust-sdk

./: .env.example  .gitignore  .semgrepignore  API_SPECIFICATION.md  ARCHITECTURAL_REVIEW_AND_IMPROVEMENTS.md  BUILD_REPORT.md  CHANGELOG.md  COMPLETION_SUMMARY.md  COMPONENT_INTERFACES.md  COMPREHENSIVE_REVIEW_REPORT.md  CRATE_PUBLISHING_CHECKLIST.md  Cargo.toml  EXAMPLES_UPDATE_SUMMARY.md  FINAL_IMPROVEMENTS_REPORT.md  FINAL_QUALITY_REPORT.md  FIXES_APPLIED_REPORT.md  FIX_REPORT.md  IMPLEMENTATION_ROADMAP.md  IMPROVEMENTS_SUMMARY.md  KNOWN_ISSUES.md  MIGRATION_GUIDE_v0.4.4.md  PERFORMANCE_ANALYSIS.md  PHASE_3_COMPLETE.md  PHASE_3_PROGRESS.md  POST_PUBLISH_VERIFICATION.md  PRODUCTION_DEPLOYMENT_CHECKLIST.md  PRODUCTION_READINESS_CHECKLIST.md  PRODUCTION_READINESS_REPORT.md  PRODUCTION_READINESS_SUMMARY.md  PRODUCTION_READY_v1.0.md  README.md  RELEASE_v0.5.0.md  RELEASE_v0.5.1.md  SECURITY_AUDIT_v0.4.4.md  SYSTEM_ARCHITECTURE_DESIGN.md  check-ci.sh  ci-check  deny.toml  my_wallet.json  run-ci-checks.sh  (+2 more)
.cargo/: audit.toml
.github/: CI_STATUS.md  dependabot.yml
.hive-mind/: hive.db  hive.db-shm  hive.db-wal
benches/: gas_estimator_benchmarks.rs  script_builder_benchmarks.rs
config/: development.toml  production.toml
docs/: API_DOCUMENTATION.md  FINAL_PRODUCTION_STATUS.md  GAS_ESTIMATION_GUIDE.md  PRODUCTION_DEPLOYMENT_GUIDE.md  PRODUCTION_DEPLOYMENT_GUIDE_v044.md  PRODUCTION_GUIDE.md  RATE_LIMITING_GUIDE.md  README.md  RELEASE_PROCESS.md  SECURITY_AUDIT.md  SGX_GUIDE.md  book.toml  getting-started.mdx
examples/: README.md  analyze_encryption_bottleneck.rs  gas_estimation.rs  (+5 more)
examples/advanced/: Cargo.toml
examples/basic/: 03_check_balance.rs  04_send_transaction.rs  Cargo.toml
examples/contracts/: Cargo.toml
examples/contracts/examples/: compile.rs  methods.rs  methods_abi_and_structs.rs  neo_contract_interaction.rs
examples/neo_contracts/: Cargo.toml
examples/neo_contracts/examples/: deploy_neo_contract.rs
examples/neo_famous_contracts/: Cargo.toml  README.md
examples/neo_famous_contracts/examples/: flamingo_finance.rs  query_gas.rs
examples/neo_fs/: Cargo.toml  README.md  basic_usage.rs  multipart_upload.rs
examples/neo_nep17_tokens/: Cargo.toml
examples/neo_nep17_tokens/examples/: nep17_token_operations.rs
examples/neo_nns/: Cargo.toml
examples/neo_nns/examples/: nns_operations.rs
examples/neo_smart_contracts/: Cargo.toml
examples/neo_smart_contracts/examples/: interact_with_contract.rs
examples/neo_transactions/: Cargo.toml
examples/neo_transactions/examples/: create_and_send_transaction.rs
examples/neo_wallets/: Cargo.toml
examples/neo_wallets/examples/: wallet_management.rs  wallet_security.rs
examples/neo_x/: Cargo.toml  README.md
examples/neo_x/examples/: neo_x_bridge.rs  neo_x_evm.rs
examples/neo_x/src/: main.rs
examples/providers/: Cargo.toml
examples/providers/examples/: custom.rs  http.rs  mock.rs
examples/queries/: Cargo.toml
examples/queries/examples/: paginated_logs.rs  uniswapv2_pair.rs
examples/sgx_enclave/: Cargo.toml
examples/sgx_enclave/src/: lib.rs  main.rs
examples/subscriptions/: Cargo.toml
examples/subscriptions/examples/: subscribe_blocks.rs  subscribe_events_by_type.rs  subscribe_logs.rs
examples/wallets/: Cargo.toml
examples/wallets/examples/: ledger.rs  local_signer.rs  yubi.rs
neo-cli/: Cargo.toml
neo-cli/src/: errors.rs  generator.rs  main.rs  utils_core.rs  wizard.rs
neo-cli/src/commands/: blockchain.rs  contract.rs  fs.rs  neofs.rs  network.rs  nft.rs  tools.rs  wallet.rs
neo-cli/src/commands/defi/: famous.rs  mod.rs  tokens.rs
neo-cli/src/monitoring/: logger.rs  metrics.rs  mod.rs
neo-cli/src/security/: error_handler.rs  keychain.rs  mod.rs  network_failover.rs  session.rs
neo-cli/tests/integration/: blockchain_tests.rs  contract_tests.rs  defi_tests.rs  fs_tests.rs  init_tests.rs  network_tests.rs  utils.rs  wallet_tests.rs
neo-gui/: Cargo.toml  package-lock.json  package.json  typedoc.json
neo-gui-rs/: Cargo.toml  README.md
neo-gui-rs/src/: main.rs
neo-gui/coverage/: index.html  lcov.info
neo-gui/coverage/lcov-report/: index.html
neo-gui/coverage/lcov-report/src/: App.tsx.html  index.html
neo-gui/coverage/lcov-report/src/__tests__/utils/: index.html  test-utils.tsx.html
neo-gui/coverage/lcov-report/src/components/: Layout.tsx.html  LoadingScreen.tsx.html  NotificationCenter.tsx.html  index.html
neo-gui/coverage/lcov-report/src/components/modals/: CompleteNFTModals.tsx.html  index.html
neo-gui/coverage/lcov-report/src/pages/: Analytics.tsx.html  Dashboard.tsx.html  DeFi.tsx.html  NFT.tsx.html  Settings.tsx.html  Tools.tsx.html  Wallet.tsx.html  index.html
neo-gui/coverage/lcov-report/src/stores/: appStore.ts.html  index.html  networkStore.ts.html  walletStore.ts.html
neo-gui/coverage/src/: App.tsx.html  index.html
neo-gui/coverage/src/__tests__/utils/: index.html  test-utils.tsx.html
neo-gui/coverage/src/components/: Layout.tsx.html  LoadingScreen.tsx.html  NotificationCenter.tsx.html  index.html
neo-gui/coverage/src/components/modals/: CompleteNFTModals.tsx.html  index.html
neo-gui/coverage/src/pages/: Analytics.tsx.html  Dashboard.tsx.html  DeFi.tsx.html  NFT.tsx.html  Settings.tsx.html  Tools.tsx.html  Wallet.tsx.html  index.html
neo-gui/coverage/src/stores/: appStore.ts.html  index.html  networkStore.ts.html  walletStore.ts.html
neo-gui/e2e/: dashboard.spec.ts
neo-gui/playwright-report/: index.html
neo-gui/src/: App.tsx
neo-gui/src-tauri/: Cargo.toml  tauri.conf.json
neo-gui/src-tauri/benches/: performance_benchmarks.rs
neo-gui/src-tauri/src/: api.rs  lib.rs  main.rs  state.rs
neo-gui/src-tauri/src/commands/: contract.rs  defi.rs  mod.rs  network.rs  nft.rs  settings.rs  utils.rs  wallet.rs
neo-gui/src-tauri/src/services/: mod.rs  network.rs  settings.rs  transaction.rs  wallet.rs
neo-gui/src/components/: Layout.tsx
neo-gui/src/pages/: HDWallet.tsx  TransactionSimulator.tsx  WebSocketMonitor.tsx
neo-gui/src/services/: network.rs
neo-gui/src/stores/: networkStore.ts
neo-gui/test-results/: .last-run.json
(+328 files in other folders)
