[package]
name = "neo3"
version = "0.5.2"
edition = "2021"
authors = ["R3E Network <jimmy@r3e.network> (c) 2020-2025"]
license = "MIT OR Apache-2.0"
description = "Production-ready Rust SDK for Neo N3 blockchain with high-level API, unified error handling, and enterprise features"
documentation = "https://docs.rs/neo3"
repository = "https://github.com/R3E-Network/NeoRust"
homepage = "https://github.com/R3E-Network/NeoRust"
readme = "README.md"
categories = ["cryptography::cryptocurrencies", "api-bindings", "cryptography"]
keywords = ["crypto", "neo", "neo-N3", "web3", "blockchain"]
exclude = [
    ".github/",
    "bin/",
    "book/",
    "**/tests/",
    "**/test-data/",
    "**/testdata/",
    "scripts/",
    "docs/",
    "website/",
    "neo-gui/",
    "neo-cli/",
    "examples/",
    "benches/",
    "test_resources/",
    "target/",
    "**/target/",
    "test_verification",
    "*.lock",
    "act",
    "**/*.dylib",
    "**/*.so",
    "**/*.a",
    "**/*.o",
    ".git/",
    "**/node_modules/",
    "**/.docusaurus/",
    "**/build/",
    "**/dist/",
    "**/coverage/",
    "**/.next/",
    "**/.turbo/",
    "**/playwright-report/",
    "**/test-results/",
]

[lib]
doctest = false

# https://docs.rs/about/metadata
[package.metadata.docs.rs]
all-features = false
features = ["futures", "ledger"]
rustdoc-args = ["--cfg", "docsrs"]
default-target = "x86_64-unknown-linux-gnu"

# https://github.com/integer32llc/rust-playground/blob/c6165a36923db5d99313e6056b5b610a2ede5bb0/top-crates/src/lib.rs#L175-L184
[package.metadata.playground]
all-features = false

[workspace]
# Explicitly set the resolver to version 2, which is the default for packages with edition >= 2021
# https://doc.rust-lang.org/edition-guide/rust-2021/default-cargo-resolver.html
resolver = "2"
members = [
    ".",
    "neo-cli",
    "neo-gui-rs",
    "examples/basic",
    "examples/intermediate", 
    "examples/advanced",
    "examples/contract_interaction",
    "examples/message_signing",
    "examples/neo_contracts",
    "examples/subscriptions",
    "examples/neo_transactions",
    "examples/transactions",
    "examples/neo_smart_contracts",
    "examples/wallets",
    "examples/neo_fs",
    "examples/events",
    "examples/big-numbers",
    "examples/neo_x",
    "examples/neo_nodes",
    "examples/neo_nns",
    "examples/middleware",
    "examples/contracts",
    "examples/providers",
    "examples/neo_famous_contracts",
    "examples/neo_nep17_tokens",
    "examples/queries",
    "examples/neo_wallets",
    "examples/neo_crypto"
]
exclude = [
    "neo-gui"
]

[patch.crates-io]
eframe = { path = "vendor/eframe-0.27.2" }

[dependencies]
tokio = { version = "1.45", features = ["full"] }
tungstenite = "0.23.0"
tokio-tungstenite = { version = "0.23.1", features = ["native-tls", "connect"] }
futures = { version = "0.3.28", default-features = false, features = ["std"] }
futures-util = "0.3.28"
futures-channel = "0.3.28"
futures-timer = { version = "3.0.2", default-features = false, features = ["wasm-bindgen"] }
pin-project = "1.1"
reqwest = { version = "0.12.5", default-features = false, features = ["json", "blocking"] }
url = { version = "2.4", default-features = false }
wiremock = "0.6"

# crypto
elliptic-curve = { version = "0.13.5", default-features = false }
generic-array = { version = "0.14.7", default-features = false }
k256 = { version = "0.13.1", default-features = false, features = ["ecdsa", "std"] }
sha2 = { version = "0.10.7", default-features = false }
tiny-keccak = { version = "2.0.2", default-features = false, features = ["sha3"] }
spki = { version = "0.7.2", default-features = false }
hmac = "0.12.1"
base64 = "0.21.7"

# serde
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["raw_value"] }

# macros
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["extra-traits"] }
async-trait = "0.1.73"
auto_impl = "1.1"

# misc
bytes = "1.4"
criterion = "0.5"
dunce = "1.0"
eyre = "0.6"
hex = { package = "const-hex", version = "1.6", features = ["hex"] }
hex-literal = "0.4"
home = "0.5.5"
once_cell = "1.18"
rand = "0.8"
rayon = "1.7"
regex = "1.9"
semver = "1.0"
tempfile = "3.8"
thiserror = "1.0"
toml = "0.8"
walkdir = "2.3"

# tracing
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.20", default-features = false, features = ["fmt", "std"] }
tracing-futures = "0.2.5"

# wasm
# instant = "0.1.12"  # REMOVED: Unmaintained (RUSTSEC-2024-0384)
web-time = "1.1.0"  # Modern replacement for instant with better WASM support
serde_with = "3.3.0"
serde_derive = "1.0.188"
# For base64 encoding
bs58 = "0.5.1"
aes = "0.8.3"
block-modes = "0.9.1"
# For hash function
sha3 = "0.10.8"
# For JSON manipulation
# json = "0.12"  # REMOVED: Unmaintained and vulnerable (RUSTSEC-2022-0081)
rust_decimal = "1.0"
# JSON encode

ripemd = "0.1.3"

# Data structures
bitvec = "1.0"
p256 = "0.13.2"
# Big integer math
num-bigint = "0.4"
# Byte array utils
byte-slice-cast = "1.2"
primitive-types = { version = "0.13.0", features = ["serde"] }
# Serialization
# bincode = "1.3"
# rust-crypto = "0.2"  # REMOVED: Vulnerable (RUSTSEC-2022-0011) - replaced with ring and other secure alternatives
lazy_static = "1.4.0"
num-traits = "0.2.16"
chrono = { version = "0.4.31", features = ["serde"] }
strum = "0.26.3"
strum_macros = "0.26.4"
num_enum =   "0.7.0"
derive_more = { version = "1.0.0", features = ["full"] }
indexmap = "2.0.0"
getset = "0.1.2"
educe = "0.6.0"
byteorder = "1.4.3"
serde-big-array = "0.5.1"
blake2 = { version = "0.10.6", default-features = false }
serde_bytes = "0.11.12"

scrypt = "0.11.0"
rust_decimal_macros = "1.33"
typenum =   "1.14"
signature   = "2.1.0"
rand_core = "0.6.4"
num-integer =  "0.1.45"
#openssl = "0.10"

log = "0.4.14"
ecb = "0.1.2"
cipher = { version = "0.4.4", features = [] }
http = "1.1.0"
jsonwebtoken = "9.2.0"

uint = { git = "https://github.com/paritytech/parity-common", package = "uint", version = "0.10.0", default-features = false }
impl-codec = { version = "0.6", default-features = false, optional = true }
impl-serde = { version = "0.5.0", default-features = false, optional = true }
scale-info = { version = ">=1.0, <3", features = ["derive"], default-features = false, optional = true }
ring = { version = "0.17.12", features = [] }

# ledger
coins-ledger = { version = "0.12.0", default-features = false, optional = true }
protobuf = { version = "3.7.2", optional = true }
# yubi - conditional compilation for release builds
yubihsm = { version = "0.42", features = ["http", "usb"], optional = true }
block-padding = "0.3.3"
async-stream = "0.3.5"

bip39 = { version = "2.1.0", features = ["rand"] }

# SGX dependencies (optional) - only available when building for SGX target
# These are commented out by default as they require special SGX environment
# Uncomment when building for SGX:
# sgx_tstd = { git = "https://github.com/apache/teaclave-sgx-sdk.git", rev = "v2.0.0", optional = true }
# sgx_types = { git = "https://github.com/apache/teaclave-sgx-sdk.git", rev = "v2.0.0", optional = true }
# sgx_trts = { git = "https://github.com/apache/teaclave-sgx-sdk.git", rev = "v2.0.0", optional = true }
# sgx_tcrypto = { git = "https://github.com/apache/teaclave-sgx-sdk.git", rev = "v2.0.0", optional = true }


[dev-dependencies]
mockall = "0.13.0"
tracing = "0.1"
tracing-subscriber = "0.3.18"
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3.0"
serial_test = "3.2.0"
proptest = "1.5"

[[bench]]
name = "crypto_benchmarks"
harness = false

[[bench]]
name = "script_builder_benchmarks"
harness = false

[[bench]]
name = "gas_estimator_benchmarks"
harness = false

[features]
futures = []
ledger = ["coins-ledger", "protobuf"]
# aws = ["rusoto_core", "rusoto_kms"]  # DISABLED: Security vulnerabilities in rusoto dependencies
default = []
# YubiHSM features - only for development/testing
yubi = ["dep:yubihsm"]
mock-hsm = ["dep:yubihsm", "yubihsm/mockhsm"]
dev-rpc = []
ipc = []
init = []
substrate = []
ws = []
legacy-ws = []
yubihsm = []

# SGX support for secure enclave execution
# Note: SGX dependencies must be manually uncommented above when building for SGX
sgx = [
    "no_std"
    # Uncomment these when SGX dependencies are enabled:
    # "sgx_tstd",
    # "sgx_types", 
    # "sgx_trts",
    # "sgx_tcrypto",
]

# no_std support for embedded and SGX environments
no_std = [
    "serde/alloc",
    "hex/alloc",
    "sha2/asm",
    "k256/arithmetic",
    "elliptic-curve/arithmetic",
    "generic-array/more_lengths"
]
