[package]
name = "neo-cli"
version = "0.4.3"
edition = "2021"
description = "Command-line interface for the NeoRust SDK"
authors = ["R3E Network (c) 2020-2025"]
license = "MIT"

[[bin]]
name = "neo-cli"
path = "src/main.rs"

[features]
default = ["network", "fs", "storage", "files", "neofs"]
network = []
fs = []
storage = []
files = []
neofs = []

[dependencies]
neo3 = { path = "..", version = "0.5.0", features = ["futures", "ledger"] }
tokio = { version = "1.48", features = ["full"] }
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.9"
colored = "3.0"
comfy-table = "7.2"
dirs = "6.0"
rpassword = "7.0"
regex = "1.12"
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22"
hex = "0.4"
rand = "0.9"
futures = "0.3"
async-trait = "0.1"
url = "2.4"
dialoguer = "0.12"
anyhow = "1.0"
thiserror = "2.0"
indicatif = "0.18"
primitive-types = "0.13"
num-traits = "0.2"
reqwest = { version = "0.12", features = ["json"] }
sha2 = "0.10"
ripemd = "0.1"
env_logger = "0.11.8"
log = "0.4"
mime_guess = "2.0"

[dev-dependencies]
tempfile = "3.23.0"
assert_cmd = "2.1.1"
predicates = "3.1.0"
