[package]
name = "neo-gui-rs"
version = "0.1.0"
edition = "2021"
publish = false
authors = ["R3E Network"]
license = "MIT OR Apache-2.0"
description = "Native Rust GUI shell for the NeoRust SDK"

[dependencies]
eframe = "0.27"
egui = "0.27"
once_cell = "1.19"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.45", features = ["rt-multi-thread", "macros"] }
tokio-stream = "0.1"
futures = "0.3"
parking_lot = "0.12"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio-util = { version = "0.7", features = ["sync"] }
