[package]
name = "neo-gui-rs"
version = "0.1.0"
edition = "2021"
publish = false
authors = ["R3E Network"]
license = "MIT OR Apache-2.0"
description = "Native Rust GUI shell for the NeoRust SDK"

[dependencies]
eframe = { version = "0.27", default-features = false, features = ["glow", "x11", "wayland", "default_fonts"] }
egui = { version = "0.27", default-features = false, features = ["default_fonts", "log"] }
egui_plot = "0.27"
once_cell = "1.19"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.45", features = ["rt-multi-thread", "macros"] }
futures = "0.3"
parking_lot = "0.12"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
neo3 = { path = "..", default-features = false, features = ["futures"] }
hex = "0.4"
rust_decimal = { version = "1.36", default-features = false, features = ["std"] }
