[package]
name = "basic-examples"
version = "0.1.0"
edition = "2021"
description = "Basic Neo N3 examples for beginners"

[dependencies]
neo3 = { path = "../../", features = ["default"] }
tokio = { version = "1.48", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
colored = "3.0"
anyhow = "1.0"
hex = "0.4"

[[example]]
name = "01_connect_to_network"
path = "01_connect_to_network.rs"

[[example]]
name = "02_create_wallet"
path = "02_create_wallet.rs"

[[example]]
name = "03_check_balance"
path = "03_check_balance.rs"

[[example]]
name = "04_send_transaction"
path = "04_send_transaction.rs"