[package]
name = "neo_famous_contracts"
version = "0.1.0"
edition = "2021"


[features]
default = []
futures = ["neo3/futures"]
ledger = ["neo3/ledger"]
[dependencies]
neo3 = { path = "../../", package = "neo3", features = [] }
tokio = { version = "1.0", features = ["full"] }
primitive-types = "0.13.1"
hex = { package = "const-hex", version = "1.6", features = ["hex"] }

[[example]]
name = "flamingo_finance"
path = "examples/flamingo_finance.rs"

[[example]]
name = "neoburger_neo"
path = "examples/neoburger_neo.rs"

[[example]]
name = "grandshare"
path = "examples/grandshare.rs"

[[example]]
name = "neocompound"
path = "examples/neocompound.rs"

[[example]]
name = "query_neo"
path = "examples/query_neo.rs"

[[example]]
name = "query_gas"
path = "examples/query_gas.rs"
