[package]
name = "neo_fs_examples"
version = "0.1.0"
edition = "2021"
authors = ["R3E Network <jimmy@r3e.network>"]
license = "MIT OR Apache-2.0"
publish = false


[features]
default = []
futures = ["neo3/futures"]
ledger = ["neo3/ledger"]
[dependencies]
neo3 = { path = "../../", package = "neo3", features = [] }
tokio = { version = "1.32", features = ["full"] }
anyhow = "1.0.75"
uuid = { version = "1.8", features = ["v4"] }
rand = "0.8"
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }

[[example]]
name = "neo_fs_basic_usage"
path = "basic_usage.rs"

[[example]]
name = "neo_fs_multipart_upload"
path = "multipart_upload.rs"
