[package]
name = "neo_nns_examples"
version = "0.1.0"
edition = "2021"
authors = ["R3E Network <jimmy@r3e.network>"]
publish = false


[features]
default = []
futures = ["neo3/futures"]
ledger = ["neo3/ledger"]
[dependencies]
neo3 = { path = "../../", package = "neo3", features = [] }
tokio = { version = "1.48", features = ["full"] }
eyre = "0.6"

[[example]]
name = "nns_operations"
path = "examples/nns_operations.rs" 