[package]
name = "neo_smart_contracts_examples"
version = "0.1.0"
edition = "2021"
authors = ["R3E Network <jimmy@r3e.network>"]
publish = false


[features]
default = []
futures = ["neo3/futures"]
ledger = ["neo3/ledger"]
[dependencies]
neo3 = { path = "../../", package = "neo3", features = [] }
tokio = { version = "1.47", features = ["full"] }
eyre = "0.6"
hex = "0.4"

# Add examples based on the files in the examples directory
[[example]]
name = "interact_with_contract"
path = "examples/interact_with_contract.rs" 