[package]
name = "neo_wallets_examples"
version = "0.1.0"
edition = "2021"
authors = ["R3E Network <jimmy@r3e.network>"]
publish = false


[features]
default = []
futures = ["neo3/futures"]
ledger = ["neo3/ledger"]

[dependencies]
neo3 = { path = "../../", package = "neo3", features = [] }
tokio = { version = "1.47", features = ["full"] }
eyre = "0.6"
hex = "0.4"
serde_json = "1.0"

[[example]]
name = "wallet_management"
path = "examples/wallet_management.rs" 