[features]
default = []
futures = ["neo3/futures"]
ledger = ["neo3/ledger"]
[package]
name = "examples-providers"
version = "0.0.0"
publish = false
edition = "2021"
authors = ["R3E Network <jimmy@r3e.network>"]

[dev-dependencies]
neo3 = { path = "../../", package = "neo3", features = [] }
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread"] }
async-trait = "0.1.51"
reqwest = "0.12.24"
url = "2.2.2"
serde = "1.0.130"
serde_json = "1.0.68"
thiserror = "2.0.17"
eyre = "0.6.5"
primitive-types = "0.13.1"
rand = "0.9"
