[features]
default = []
futures = ["neo3/futures"]
ledger = ["neo3/ledger"]
[package]
name = "examples-queries"
version = "0.0.0"
publish = false
edition = "2021"
authors = ["R3E Network <jimmy@r3e.network>"]


[dev-dependencies]
neo3 = { path = "../../", package = "neo3", features = [] }
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
eyre = "0.6.5"
