[features]
default = []
futures = ["neo3/futures"]
ledger = ["neo3/ledger"]
[package]
name = "examples-subscriptions"
version = "0.0.0"
publish = false
edition = "2021"
authors = ["R3E Network <jimmy@r3e.network>"]


[dev-dependencies]
neo3 = { path = "../../", package = "neo3", features = [] }
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
eyre = "0.6.5"
tokio-tungstenite = "0.23"
futures-util = "0.3"
chrono = "0.4"