[features]
default = []
futures = ["neo3/futures"]
ledger = ["neo3/ledger"]
[package]
name = "wallets"
version = "0.1.0"
publish = false
edition = "2021"
authors = ["R3E Network <jimmy@r3e.network>"]

[dev-dependencies]
neo3 = { path = "../../", package = "neo3", features = [] }
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.143"
eyre = "0.6.5"
[dependencies]
yubihsm = { version = "0.42", features = ["mockhsm", "http", "usb"] }
tokio = { version = "1.47.1", features = ["rt", "rt-multi-thread", "macros"] }
bip39 = { version = "2.2.0", features = ["rand"] }
rand = "0.9.2"
hex = "0.4"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
serde_json = "1.0"

[[example]]
name = "local_signer"
path = "examples/local_signer.rs"

[[example]]
name = "sign_message"
path = "examples/sign_message.rs"