[workspace]

[package]
name = "neo-gui"
version = "0.4.2"
edition = "2021"
description = "Modern GUI application for the NeoRust SDK"
authors = ["R3E Network (c) 2020-2025"]
license = "MIT"

[lib]
name = "neo_gui"
path = "src/lib.rs"

[[bin]]
name = "neo-gui"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2.0.4", features = [] }

[dependencies]
neo3 = { path = "../..", version = "0.4.2" }
tauri = { version = "2.5.1", features = [
  "tray-icon",
  "image-ico",
  "image-png"
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.35", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"
uuid = { version = "1.6", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.21"
hex = "0.4"
sha2 = "0.10"
ripemd = "0.1"
reqwest = { version = "0.11", features = ["json"] }
futures = "0.3"
async-trait = "0.1"
log = "0.4"
env_logger = "=0.11.6"
rand = "0.8"

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.12"
tempfile = "3.8"
serial_test = "3.0"
proptest = "1.4"
criterion = { version = "0.5", features = ["html_reports"] }
wiremock = "0.5"
test-case = "3.3"
rand = "0.8"


[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
